# nzshm-common-py

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: dev.yml  release.yml  run-tests.yml
docs/: installation.md
docs/api/: constants.md
docs/api/grids/: region_grid.md
docs/api/location/: code_location.CodedLocation.md  code_location.CodedLocationBin.md  coded_location.md  index.md  location.md  types.md
nzshm_common/: __init__.py  constants.py
nzshm_common/coastlines/: README.md  nz-coastlines-and-islands-polygons-topo-150k.dbf  nz-coastlines-and-islands-polygons-topo-150k.txt  nz-coastlines-and-islands-polygons-topo-150k.xml
nzshm_common/geometry/: geometry.py
nzshm_common/grids/: io.py  nz_0_1_nb_1_v0.py  nz_0_1_nb_1_v1.py  nz_0_2_nb_1_1.py  region_grid.py  wlg_0_01_nb_1_1.py  wlg_0_05_nb_1_1.py
nzshm_common/location/: UrbanRuralLists.csv  __init__.py  code_location.py  coded_location.py  location.py  locations.comp  locations.json  locations_srwg214.json  types.py
nzshm_common/location/resources/: maori_names.csv
nzshm_common/util/: compression.py
scripts/: locations_to_oq.py
tests/: test_backarc.py  test_coded_location.py  test_coded_location_bin.py  test_coded_location_fix76.py  test_compression.py  test_geometry.py  test_get_location_list.py  test_get_locations.py  test_location.py  test_region_grid.py
