[project]
name = "nzshm-common"
version = "0.9.4"
description = "A small pure python library for shared NZ NSHM data like locations."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Chris B Chamberlain", email = "chrisbc@artisan.co.nz" },
    {name = "Chris DiCaprio", email = "christopher.dicaprio@gmail.com"},
    {name="Oakley Jurgens", email="oakley.jurgens@gmail.com"},
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}
]
requires-python = ">=3.10,<4.0"

[project.urls]
Homepage = "https://github.com/GNS-Science/nzshm-common-py"
Documentation = "https://gns-science.github.io/nzshm-common-py"
Issues = "https://github.com/GNS-Science/nzshm-common-py/issues"
Changelog = "https://github.com/GNS-Science/nzshm-common-py/blob/main/CHANGELOG.md"

[tool.poetry]
packages = [
	{ include = "nzshm_common" },
	{ include = "tests", format = "sdist" }
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[project.optional-dependencies]
geometry = [
    "shapely",
]

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.dev]
optional = true

[dependency-groups]
dev = [
    "black",
    "bump2version",
    "flake8-docstrings",
    "flake8",
    "isort",
    "mypy",
    "pip-audit (>=2.9.0)",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "safety (>=3.6.2)",
    "shapely",
    "toml",
    "tox",
    "twine",
    "pydantic (>=2.12.5)"
]

doc = [
    "griffe (>=1.14.0,<2.0.0)",
    "mkdocs-autorefs",
    "mkdocs-click (>=0.9.0,<0.10.0)",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material-extensions",
    "mkdocs-material",
    "mkdocs",
    "mkdocstrings-python (>=1.18.2,<2.0.0)",
    "mkdocstrings"
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
