[project]
name = "nzshm-common"
version = "0.9.5"
description = "A small pure python library for shared NZ NSHM data like locations."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Chris B Chamberlain", email = "chrisbc@artisan.co.nz" },
    {name = "Chris DiCaprio", email = "christopher.dicaprio@gmail.com"},
    {name="Oakley Jurgens", email="oakley.jurgens@gmail.com"},
    {name="NSHM Compute Working Group", email="nshm@gns.cri.nz"}
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/GNS-Science/nzshm-common-py"
Documentation = "https://gns-science.github.io/nzshm-common-py"
Issues = "https://github.com/GNS-Science/nzshm-common-py/issues"
Changelog = "https://github.com/GNS-Science/nzshm-common-py/blob/main/CHANGELOG.md"

[project.optional-dependencies]
geometry = [
    "shapely",
]

[dependency-groups]
dev = [
    "bump2version",
    "mypy",
    "pip-audit (>=2.9.0)",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "ruff",
    "safety (>=3.6.2)",
    "shapely",
    "toml",
    "tox",
    "twine",
    "pydantic (>=2.12.5)"
]

doc = [
    "griffe (>=1.14.0,<2.0.0)",
    "mkdocs-autorefs",
    "mkdocs-click (>=0.9.0,<0.10.0)",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material-extensions",
    "mkdocs-material",
    "mkdocs",
    "mkdocstrings-python (>=1.18.2,<2.0.0)",
    "mkdocstrings"
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C90"]
ignore = ["E203", "E266"]
per-file-ignores = {"__init__.py" = ["F401"]}

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
force-sort-within-sections = false
lines-after-imports = -1

[tool.ruff.format]
quote-style = "preserve"

[tool.uv]
exclude-newer = "1 week"

[tool.hatch.build.targets.wheel]
packages = ["nzshm_common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
